Add web spectator streaming for live game viewing
PeerHub streams game state (map heights, tree positions, player info,
unit/building positions) every 5 ticks to the matchmaking server via
updateSpectatorInfo(). Server writes to /var/games/{gameId} for web
viewer consumption. WebsiteLinkHelper modernized with StandardCharsets.